unpackaged/main/default/objects/Student_Result__c/Student_Result__c.object-meta.xml
<CustomObject>
    <label>Student Result</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Student id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>