unpackaged/main/default/objects/Student_Result__c/fields/Admission_Form__c.field-meta.xml
<CustomField>
    <fullName>Admission_Form__c</fullName>
    <label>Admission Form</label>
    <referenceTo>Admission_Form__c</referenceTo>
    <relationshipLabel>Student Results</relationshipLabel>
    <relationshipName>Student_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>