unpackaged/main/default/objects/Student_Result__c/fields/Mark_1__c.field-meta.xml
<CustomField>
    <fullName>Mark_1__c</fullName>
    <label>Mark 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>