unpackaged/main/default/objects/Student_Result__c/fields/Mark_2__c.field-meta.xml
<CustomField>
    <fullName>Mark_2__c</fullName>
    <label>Mark 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>