unpackaged/main/default/objects/Student_Result__c/fields/Mark_3__c.field-meta.xml
<CustomField>
    <fullName>Mark_3__c</fullName>
    <label>Mark 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>